изменён html и scc

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       </div>
     </div>
     <article class="container-findcontact">
-      <h2 class="headers">find contact</h2>
+      <h2 class="headers headers-findcontact">find contact</h2>
       <div class="description-info">
         <p>
           Contact others to find right coach or athlete you are looking for.
